feat(frontend): migrate from Gradio to Vue 3 with modern dark theme dashboard
Complete frontend modernization implementing Story 7.1 requirements:

Frontend Architecture:
- Migrate from Gradio UI to Vue 3 + Vite + TypeScript stack
- Implement Composition API with Pinia state management
- Add TailwindCSS with dark theme (slate-950/900 palette)
- Integrate shadcn-vue component library for modern UI

Dashboard Components:
- Create responsive Dashboard.vue with stats, pipeline, and job views
- Add JobTable.vue with sortable columns and filtering
- Implement PendingJobs.vue for job queue management
- Build PipelineView.vue for workflow visualization
- Add SearchConfig.vue for job search parameters
- Create Sidebar.vue and Navbar.vue for navigation

Real-time Features:
- Implement WebSocket service for live job updates
- Add jobStore for reactive job state management
- Create searchConfigStore for configuration persistence
- Integrate uiStore for dark theme and layout state

Backend Integration:
- Add WebSocket endpoint at app/ui/websocket.py
- Create API request models in app/models/api_requests.py
- Update FastAPI main.py with CORS and WebSocket support
- Remove deprecated Gradio UI (app/ui/gradio_app.py)
- Fix linting issues (unused variable, bare except clause)

Development Infrastructure:
- Add frontend Dockerfile with multi-stage build
- Update docker-compose.yml with frontend service
- Create Makefile targets for build, dev, and deployment
- Add shell completion scripts for developer experience
- Configure .devcontainer for VS Code development

Testing & Validation:
- Add Playwright MCP integration for UI testing
- Include 12 visual regression screenshots
- Create tests/ui/test_websocket.py for WebSocket validation
- Update integration tests for new architecture

Documentation:
- Add GRADIO_TO_VUE3_MIGRATION.md with migration guide
- Create docs/prd/epic-7-frontend-modernization.md
- Add docs/stories/7.1.vue3-frontend-migration.md
- Include QA assessments and gate 

--- a/.bmad-core/agent-teams/team-fullstack.yaml
+++ b/.bmad-core/agent-teams/team-fullstack.yaml
@@ -10,6 +10,11 @@ agents:
   - ux-expert
   - architect
   - po
+  - dev
+  - frontend-developer
+  - qa
+  - sm
+  - code-reviewer
 workflows:
   - brownfield-fullstack.yaml
   - brownfield-service.yaml
@@ -17,3 +22,4 @@ workflows:
   - greenfield-fullstack.yaml
   - greenfield-service.yaml
   - greenfield-ui.yaml
+  - iterative-workflow.yaml
