feat: Story 7.2 - Application History and Search
Complete implementation of application history with enhanced job table

Backend API:
- Add /api/history/applications endpoint for fetching application history
- Add /api/history/stats endpoint for statistics and trends
- Extend ApplicationRepository with history queries
- Add search, filter, and pagination support

Frontend Enhancements:
- Enhanced JobTable with Match Score and Days Advertised columns
- Prominent blue clickable platform buttons with hover effects
- ApplicationHistory component with full search and filtering
- ApplicationDetailModal for viewing complete job/application details
- ApplicationTrendChart for visualizing application trends over time
- PlatformDistributionChart for showing applications by platform
- Pinia store (historyStore) for state management

Features:
- Search applications by title, company, or status
- Filter by platform, date range, status
- Sort by any column
- Export to CSV functionality
- Responsive charts using Chart.js
- Real-time statistics (total applications, success rate, avg match score)

Story Status: COMPLETE ✅ (11/11 acceptance criteria met)

--- a/.bmad-core/workflows/iterative-workflow.yaml
+++ b/.bmad-core/workflows/iterative-workflow.yaml
@@ -43,8 +43,8 @@
 # ========================================================================
 
 workflow:
-  id: iterative-story-development
-  name: Job Application Automation - Iterative Story Development
+  id: iterative-workflow
+  name: Job Application Automation - Iterative Workflow
   description: >-
     FULLY AUTONOMOUS orchestrator-controlled workflow for iterative development.
     The bmad-orchestrator maintains control throughout all 28 stories across 6 epics.
