--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
